--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,14 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": ">2.1.3",
-        "zf-commons/zfc-user": "dev-master",
-        "bjyoungblood/bjy-authorize": "1.2.*"
+        "zendframework/zendframework":       ">2.1.3",
+        "zendframework/zend-mvc":            "2.*",
+        "zendframework/zend-eventmanager":   "2.*",
+        "zendframework/zend-stdlib":         "2.*",
+        "zendframework/zend-servicemanager": "2.*",
+        "zendframework/zend-version":        "2.*",
+        "zf-commons/zfc-user":               "dev-master",
+        "bjyoungblood/bjy-authorize":        "1.2.*",
+        "bjyoungblood/bjy-profiler":         "Version: dev-master, allows the usage of the (Zend) Db collector."
     }
 }
